# claude-init-monorepo

./: CLAUDE.md  README.md  init_claude_workspaces.py  pyproject.toml
