[project]
name = "claude-init-monorepo"
version = "0.1.0"
description = "Script to create CLAUDE.md files for all pnpm workspace packages"
authors = [{name = "Marcus Schiesser"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
claude-init = "init_claude_workspaces:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "init_claude_workspaces.py",
]

[tool.uv]
dev-dependencies = []